# automap-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: PROTOCOL_COVERAGE.md  REFACTORING_COMMANDS.md  TEMPLATE_API_PLAN.md  TEMPLATE_STRUCTURE.md
examples/: demo_smol.rs  demo_tokio.rs
src/: lib.rs  midi.rs
src/automap/: device.rs  mod.rs
src/automap/protocol/: cc.rs  command.rs  event.rs  mod.rs  sysex.rs  template.rs
